--- a/src/app/component/customer/carousel-customer-vertical/carousel-customer-vertical.component.scss
+++ b/src/app/component/customer/carousel-customer-vertical/carousel-customer-vertical.component.scss
@@ -70,3 +70,12 @@
 .container-ng-carousel .row:nth-child(1){
   padding-top: 25px;
 }
+.header-carousel-admin{
+  border-bottom: 2px solid #eae3ed;
+  h1{
+    padding: 15px 15px 0 15px;
+  }
+}
+.body-carousel-admin{
+  padding: 15px;
+}
