--- a/src/app/component/customer/carousel-customer/carousel-customer.component.html
+++ b/src/app/component/customer/carousel-customer/carousel-customer.component.html
@@ -1,10 +1,10 @@
-<div class="top-carousel">
-  <div class="owl-carousel-vertical">
+<div class="header-carousel-admin">
+  <h1>{{GLOBAL.HEADER.CAROUSEL_V}}</h1>
+</div>
+<div class="top-carousel body-carousel-admin">
+  <div class="owl-carousel-vertical ">
     <owl-carousel [options]="customOptionsLeft" [carouselClasses]="['owl-theme', 'row', 'sliding']" #owlElement
       id="owl-demo">
     </owl-carousel>
   </div>
-  <button (click)="openDialog()">
-      OPEN DIALOG
-  </button>
 </div>
