--- a/src/app/component/customer/carousel-customer/carousel-customer.component.scss
+++ b/src/app/component/customer/carousel-customer/carousel-customer.component.scss
@@ -66,6 +66,15 @@
     width: 90%;
   }
 }
+.header-carousel-admin{
+  border-bottom: 2px solid #eae3ed;
+  h1{
+    padding: 15px 15px 0 15px;
+  }
+}
+.body-carousel-admin{
+  padding: 15px;
+}
 
 
 /* SMARTPHONES PORTRAIT */
