--- a/src/app/component/customer/confirm/confirm.component.html
+++ b/src/app/component/customer/confirm/confirm.component.html
@@ -9,7 +9,7 @@
     <div mat-dialog-content>
       <div class="body-dialog-custom">
         <div class="row">
-          <mat-icon icon="report_problem"></mat-icon>
+          <mat-icon>report_problem</mat-icon>
           <p style="padding: 2px 0px 0px 5px">{{message}}</p>
         </div>
       </div>
