--- a/src/app/component/customer/confirm/confirm.component.scss
+++ b/src/app/component/customer/confirm/confirm.component.scss
@@ -54,7 +54,7 @@ button{
         .row{
           padding: 1em 1em 1em 2em;
         }
-        border-bottom: 1px solid #333333;
+        border: 2px solid #edf1f7;
       }
     }
   }
@@ -73,7 +73,7 @@ button{
               font-size: 1rem
           }
           padding: 4px;
-          width: 70px;
+          width: 100px;
         }
         .btn-save-actions:hover{
           background-color: #319def;
