--- a/src/app/component/customer/find-component/find-component.component.html
+++ b/src/app/component/customer/find-component/find-component.component.html
@@ -3,9 +3,9 @@
       <input type="search"
           [(ngModel)]="search"
           name="search-input"
-          class="mat-elevation-z2 search-input"
+          class="search-input"
           placeholder="Tìm kiếm">
-      <button class="btn-search" type="submit" name="search-btn" mat-raised-button>
+      <button class="btn-search" type="submit" name="search-btn" mat-flat-button>
           <mat-icon>search</mat-icon>
       </button>
   </div>
