--- a/src/app/component/media/media.component.scss
+++ b/src/app/component/media/media.component.scss
@@ -7,3 +7,12 @@ button[type=button]
   text-align: center;
 }
 
+.header-media-file-admin{
+  border-bottom: 2px solid #eae3ed;
+  h1{
+    padding: 15px 15px 0 15px;
+  }
+}
+.body-media-file-admin{
+  padding: 15px;
+}
