--- a/src/app/component/customer/card-customer/card-customer.component.scss
+++ b/src/app/component/customer/card-customer/card-customer.component.scss
@@ -9,12 +9,27 @@ mat-card {
   margin-left: 5px;
   margin-right: 5px;
   border-radius: 0px;
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
 mat-card-header{
   padding: 10px;
 }
 mat-card-content{
-  padding: 10px
+  padding: 10px;
+  video, image{
+    border: 1px solid #fafafa;
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  }
+  table{
+    td{
+      text-align: center;
+      vertical-align: middle;
+    }
+    th{
+      text-align: center;
+      vertical-align: middle;
+    }
+  }
 }
 .rotateimg180 {
   -webkit-transform: rotate(180deg);
@@ -50,3 +65,16 @@ mat-card-content{
     width: 100%;
   }
 }
+.search-input-container{
+  text-align: center;
+  margin-bottom: 10px;
+  width: 100%;
+  ::ng-deep input{
+    padding: 12px 16px !important;
+  }
+  ::ng-deep form > div{
+    padding-right: 0px !important;
+  }
+
+}
+
