--- a/src/app/component/customer/find-component/find-component.component.scss
+++ b/src/app/component/customer/find-component/find-component.component.scss
@@ -1,8 +1,5 @@
 .container-form{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 15px;
+  padding-right: 65px;
   .search-input{
       border: solid 1px rgba(0, 0, 0, 0.1);
       border-radius: 2px;
@@ -11,11 +8,13 @@
       width: 100%;
       max-width: 375px;
       font-size: 16px;
-      line-height: 34px;
   }
   .btn-search {
       background-color: #007bff;
       color: white;
-      height: 47px;
+      padding: 6px 16px;
+      margin-left: 2px;
+      border-radius: 2px;
   }
 }
+
