--- a/src/app/component/customer/list-item-customer/list-item-customer.component.html
+++ b/src/app/component/customer/list-item-customer/list-item-customer.component.html
@@ -1,18 +1,19 @@
-<mat-list-item [ngStyle]="{'padding-left': (depth * 12) + 'px'}" (click)="onItemSelected(item)"
-  [ngClass]="{'active': item.route ? router.isActive(item.route, true): false, 'expanded': expanded}"
-  class="menu-list-item">
-  <mat-icon class="routeIcon" [ngStyle]="{'color': item.color}">{{item.iconName}}</mat-icon>
-  {{item.displayName}}
-  <span fxFlex *ngIf="item.children && item.children.length">
-    <span fxFlex></span>
-    <mat-icon [@indicatorRotate]="expanded ? 'expanded': 'collapsed'">
-      expand_more
-    </mat-icon>
-  </span>
-</mat-list-item>
-<div *ngIf="expanded">
-  <div *ngFor="let child of item.children">
-    <app-list-item  [item]="child" [depth]="depth+1" [mobile]="mobile"></app-list-item>
-    <hr>
+<div class="container-list-item">
+  <mat-list-item [ngStyle]="{'padding-left': (depth * 1.5) + 'px'}" (click)="onItemSelected(item)"
+    [ngClass]="{'active': item.route ? router.isActive(item.route, true): false, 'expanded': expanded}"
+    class="menu-list-item">
+    <mat-icon class="routeIcon" [ngStyle]="{'color': item.color}">{{item.iconName}}</mat-icon>
+    <span [ngStyle]="{'color': item.color}">{{item.displayName}}</span>
+    <span fxFlex *ngIf="item.children && item.children.length">
+      <span fxFlex></span>
+      <mat-icon [@indicatorRotate]="expanded ? 'expanded': 'collapsed'">
+        expand_more
+      </mat-icon>
+    </span>
+  </mat-list-item>
+  <div *ngIf="expanded">
+    <div *ngFor="let child of item.children">
+      <app-list-item [item]="child" [depth]="depth+1" [menuElement]="item" [mobile]="mobile"></app-list-item>
+    </div>
   </div>
 </div>
