--- a/src/app/component/customer/menu-list-item/menu-list-item.component.scss
+++ b/src/app/component/customer/menu-list-item/menu-list-item.component.scss
@@ -1,7 +1,7 @@
 .left-layout{
-  min-height: 100vh;
+  min-height: 110vh;
   background-color: #FFFFFF;
-  border: 1px solid gainsboro;
+  border-top: 1px solid gainsboro;
   border-radius: 2px;
   padding: 10px;
 }
@@ -11,13 +11,17 @@
   background-color: #FFFFFF;
   border: 1px solid gainsboro;
   border-radius: 2px;
-  padding: 10px;
+  padding: 10px 0 10px 0;
+  position: relative;
+  top: 2em;
 }
 .image-responsive{
   width: 100%;
   height: auto;
 }
 hr{
+  padding-right: 0px;
+  padding-top:0px;
   margin-top: 0px;
   margin-bottom: 0px;
   border: 0;
