--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -1,40 +1,41 @@
-a {
-  text-decoration: none;
-  color: white;
-}
-a:hover, a:active{
-  color: lightgray;
-}
-.navigation-items{
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-mat-toolbar{
-  border-radius: 3px;
-}
-.tic-tac-color-blue{
-  background-image: linear-gradient(90deg,#020024 19%, #090c79 47%,#00ccff 97%);
-}
-.tic-tac-color-green{
-  background-image: linear-gradient(90deg, rgba(0,36,1,1) 19%, rgba(22,121,9,0.9850315126050421) 76%, rgba(123,255,0,0.9037990196078431) 95%);
-}
-.icon-list{
-  position: relative;
-  top:5px;
-  margin:0;
-  padding:0;
-  border:0;
-}
-.toolbar-header{
-  background-color: #FFFFFF;
-  border: 1px solid gainsboro;
-  border-radius: 2px;
-  padding: 10px;
-}
+::ng-deep .header-wrapper{
+  z-index: 4;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 70px;
+  background-color: #E6EAED;
+  .mat-toolbar{
+    color: #1a2138;
+    background-color: #fff;
+    height: 70px;
+  }
+  a {
+    text-decoration: none;
+    color: black;
+  }
+  a:hover, a:active{
+    color: lightgray;
+  }
+  .icon-list{
+    position: relative;
+    top:5px;
+    margin:0;
+    padding:0;
+    border:0;
+  }
+  .navigation-items{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    align-items: center;
+  }
+  .image-logo-header{
+    img{
+      width:50%;
+      height: 50%;
+    }
 
-@media(max-width: 959px){
-  mat-toolbar{
-      border-radius: 0px;
   }
 }
