--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -27,18 +27,18 @@
           <ngb-carousel *ngIf="images">
             <ng-template ngbSlide>
               <div class="wrapper">
-                <img [src]="images_famework[0]" alt="Random first slide">
+                <img [src]="imagesFramework[0]" alt="Random first slide">
               </div>
             </ng-template>
             <ng-template ngbSlide>
               <div class="wrapper">
-                <img [src]="images_famework[1]" alt="Random second slide">
+                <img [src]="imagesFramework[1]" alt="Random second slide">
               </div>
 
             </ng-template>
             <ng-template ngbSlide>
               <div class="wrapper">
-                <img [src]="images_famework[2]" alt="Random third slide">
+                <img [src]="imagesFramework[2]" alt="Random third slide">
               </div>
             </ng-template>
           </ngb-carousel>
