--- a/src/app/component/manager-admin-media/manager-admin-media.component.html
+++ b/src/app/component/manager-admin-media/manager-admin-media.component.html
@@ -1,5 +1,8 @@
-<div fxLayout="row wrap" fxLayoutAlign="flex-start" fxLayoutGap="10px">
-  <div fxFlex="0 1 calc(100%-15px)">
+<div fxLayout="row wrap" fxLayoutAlign="flex-start">
+  <div fxFlex="0 1 calc(100%)" class="header-manager-media">
+      <h1>{{GLOBAL.HEADER.MEADIA_MANAGE}}</h1>
+  </div>
+  <div fxFlex="0 1 calc(100%)" class="body-manager-media">
     <app-table-custom [configure]="settingTable()"></app-table-custom>
   </div>
 <div>
