--- a/src/app/component/media/media.component.html
+++ b/src/app/component/media/media.component.html
@@ -1,8 +1,9 @@
-<mat-toolbar>
-  <h4>Media File </h4>
-</mat-toolbar>
+
 <div fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="10px" fxLayoutAlign="flex-start">
-  <div fxFlex="calc(30%-10px)" fxFlex.lt-sm="calc(100%-10px)">
+  <div fxFlex="0 1 calc(100%)" class="header-media-file-admin">
+      <h1>Media File </h1>
+  </div>
+  <div fxFlex="calc(30%-10px)" fxFlex.lt-sm="calc(100%-10px)" class="body-media-file-admin">
     <h3>Select files</h3>
     <div ng2FileDrop [ngClass]="{'nv-file-over': hasBaseDropZoneOver}" (fileOver)="fileOverBase($event)"
       [uploader]="uploader" (onFileDrop)="onFileSelected($event)" class="my-drop-zone">
@@ -23,7 +24,7 @@
       </div>
     </div>
   </div>
-  <div fxFlex="calc(70%-10px)" fxFlex.lt-sm="calc(100%-10px)">
+  <div fxFlex="calc(70%-10px)" fxFlex.lt-sm="calc(100%-10px)" class="body-media-file-admin">
     <div gdAreas="table-media|event-button">
       <div gdArea="table-media" class="table-responsive">
         <h3>Upload queue</h3>
@@ -103,7 +104,7 @@
   </div>
 </div>
 <br>
-<div class="row">
+<div class="row body-media-file-admin">
   <div class="col-md-12">
     <div class="panel panel-default">
       <div class="panel-heading"> RESPONSE </div>
