--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -6,7 +6,7 @@
       </button>
     </div>
     <div class="image-logo-header">
-      <a routerLink="/home"><img [src]="logoIcon"></a>
+      <a routerLink="/home"><img [src]="logoIcon" alt=""></a>
     </div>
 
     <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
