--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="form-login" *ngIf="!adminStatus">
   <div class="title-login">
-    <img  src="../../../assets/images//icon.png">
+    <img  src="../../../assets/images/icon.png" alt="ICON NOT FOUND">
   </div>
   <div>
     <h4>Login</h4>
