--- a/src/app/component/manager-admin-media/manager-admin-media.component.html
+++ b/src/app/component/manager-admin-media/manager-admin-media.component.html
@@ -5,4 +5,4 @@
   <div fxFlex="0 1 calc(100%)" class="body-manager-media">
     <app-table-custom [configure]="settingTable()"></app-table-custom>
   </div>
-<div>
+</div>
