--- a/src/app/component/post/post.component.scss
+++ b/src/app/component/post/post.component.scss
@@ -1,7 +1,7 @@
-.content-post{
+.content-post {
   display: block;
 }
-.content-compilier{
+.content-compiler{
   display: block;
 }
 .example-card{
