--- a/src/app/component/customer/carousel-customer/carousel-customer.component.scss
+++ b/src/app/component/customer/carousel-customer/carousel-customer.component.scss
@@ -13,7 +13,6 @@
   .owl-carousel {
     .owl-nav {
       overflow: hidden;
-      overflow: hidden;
       display: flex;
       justify-content: space-between;
       margin: auto;
@@ -27,11 +26,11 @@
         cursor: pointer;
         position: absolute;
         top: 6em;
-        bottom: 0px;
-        left: 0px;
+        bottom: 0;
+        left: 0;
         transform: rotate(180deg);
         z-index: 999;
-        border: 0px;
+        border: 0;
         font-weight: 200;
       }
       .nav-btn-next{
@@ -40,10 +39,10 @@
         cursor: pointer;
         position: absolute;
         top: 6em;
-        bottom: 0px;
-        right: 0px;
+        bottom: 0;
+        right: 0;
         z-index: 999;
-        border: 0px;
+        border: 0;
       }
   }
   .number-lesson{
