--- a/src/app/component/customer/list-item-customer/list-item-customer.component.scss
+++ b/src/app/component/customer/list-item-customer/list-item-customer.component.scss
@@ -32,10 +32,10 @@ $app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
 
 
 hr{
-  padding-left:0px;
-  padding-right: 0px;
-  margin-top: 0px;
-  margin-bottom: 0px;
+  padding-left:0;
+  padding-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
   border: 0;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
