--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -65,8 +65,8 @@ ngb-carousel .wrapper>img {
   border-radius: 2px;
   width: 100%;
   height: 100%;
-  margin : 0px;
-  padding: 0px!important;
+  margin : 0;
+  padding: 0!important;
 
 }
 
