--- a/src/app/component/media/media.component.html
+++ b/src/app/component/media/media.component.html
@@ -16,8 +16,7 @@
     </div>
     <div gdAreas="single-choose|multiple-choose" gdGap="2px">
       <div gdArea="single-choose">
-        <input type="file" ng2FileSelect [uploader]="uploader" (onFileSelected)="onFileSelected($event)"
-          style="width: 15px;" />
+        <input type="file" ng2FileSelect [uploader]="uploader" (onFileSelected)="onFileSelected($event)"/>
       </div>
       <div gdArea="multiple-choose">
         <input type="file" ng2FileSelect [uploader]="uploader" (onFileSelected)="onFileSelected($event)" multiple />
