--- a/src/app/component/customer/menu-list-item/menu-list-item.component.html
+++ b/src/app/component/customer/menu-list-item/menu-list-item.component.html
@@ -1,4 +1,3 @@
-<app-header class="toolbar-admin"></app-header>
 <div fxLayout="row"  fxLayoutGap="15px" fxLayoutAlign="flex-start">
   <div fxFlex="195px" fxHide.lt-md fxHide-md class="left-layout" style="position: relative; top:70px">
       <mat-list style="position: fixed;width: 175px;">
@@ -13,7 +12,6 @@
       <mat-icon>menu</mat-icon>
     </button>
   </div>
-  <div fxFlex="calc(100%-210px)" fxFlex-lt.md ="90%"  class="right-layout" style="position: relative; top:70px">
-      <router-outlet></router-outlet>
-  </div>
+  <content>
+  </content>
 </div>
