--- a/src/app/component/sidenav-list/sidenav-list.component.html
+++ b/src/app/component/sidenav-list/sidenav-list.component.html
@@ -1,6 +1,7 @@
 <mat-nav-list>
   <a mat-list-item routerLink="/home" (click)="onSidenavClose()">
-    <mat-icon>home</mat-icon> <span class="nav-caption">Home</span>
+    <mat-icon>home</mat-icon>
+    <span class="nav-caption">Home</span>
   </a>
   <mat-list-item [matMenuTriggerFor]="menu">
     <mat-icon>unfold_more</mat-icon>
@@ -10,10 +11,12 @@
     <button mat-menu-item (click)="onSidenavClose()" *ngFor="let name of menuList">{{name}}</button>
   </mat-menu>
   <a mat-list-item routerLink="/posts" (click)="onSidenavClose()">
-    <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">Bài viết</span>
+    <mat-icon>assignment_ind</mat-icon>
+    <span class="nav-caption">Bài viết</span>
   </a>
   <a mat-list-item routerLink="/contact" (click)="onSidenavClose()">
-    <mat-icon>account_balance</mat-icon><span class="nav-caption">Liên hệ</span>
+    <mat-icon>account_balance</mat-icon>
+    <span class="nav-caption">Liên hệ</span>
   </a>
 
 </mat-nav-list>
